# VideoCut

./: .gitignore  SPEC.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ClipItem.tsx  Preview.tsx  Timeline.tsx  Toolbar.tsx
src/store/: projectStore.ts
